network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx1-to-nginx2
spec:
  podSelector:
    matchLabels:
      app: nginx2
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx1
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: nginx1
---------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx2-to-nginx1
spec:
  podSelector:
    matchLabels:
      app: nginx1
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx2
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: nginx2
